--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -18,7 +18,7 @@ This update assessment reports the status of Yelloweye Rockfish (*Sebastes ruber
 
 Catches for Yelloweye Rockfish have averaged over 20 mt in recent years (@fig-es-landings, @tbl-es-catches). The Yelloweye Rockfish stock was declared overfished in 2002 and remains under a rebuilding plan that substantially limits catch. However, as other rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under its rebuilding plan, catches have slowly increased in recent years, primarily in the Oregon-Washington non-trawl fleet and the recreational fleets. 
 
-```{r, fig-es-landings} 
+```{r} 
 #| label: fig-es-landings
 #| echo: false 
 #| warning: false 
@@ -32,12 +32,12 @@ knitr::include_graphics("figures/r4ss_plots/plots/catch2_landings_stacked.png")
 
 \clearpage
 
-```{r, tbl-es-catches, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-catches
 #| eval: true
 #| warning: false
 #| echo: false
-#| tbl-cap: "Recent catches (mt) by fleet and total catch (mt) summed across fleets." 
+#| tbl-cap: "Recent catches by fleet and total catch (mt) summed across fleets (total catch includes WA REC catch converted to mt)." 
 #| tbl-pos: H
 
 cat("\\begin{landscape}\n")
@@ -109,8 +109,8 @@ The last assessment for Yelloweye Rockfish occurred in 2017. This update assessm
 
 ## Stock Spawning Output and Dynamics{-}
 
-The Yelloweye Rockfish assessment uses estimates of fecundity (eggs-at-length) from the @dick_meta-analysis_2017 method, and spawning output is reported in millions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1 - 1,331.9 million eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` million eggs (95% confidence interval:
-384 – 571 million eggs), which represents `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of the unfished spawning output level.
+The Yelloweye Rockfish assessment uses estimates of fecundity (eggs-at-length) from the @dick_meta-analysis_2017 method, and spawning output is reported in billions of eggs. The unexploited level of spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` billion eggs (95% confidence interval: 1,048.1 - 1,331.9 billion eggs) (@fig-es-so). At the beginning of 2025, the spawning stock output is estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_2025")], 3)` billion eggs (95% confidence interval:
+384 – 571 billion eggs), which represents `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of the unfished spawning output level.
 
 Estimated relative spawning output was below the minimum stock size threshold in the late 1990s and was lowest in the early 2000s before increasing over the last 20 years. The 2025 estimated relative spawning output follows an increasing trajectory and is slightly above the management target threshold (@fig-es-so, @fig-es-sb). Though Yelloweye Rockfish are considered a single stock due to their population's even genetic and spatial structure throughout their range, this assessment is modeled with two areas (California and Oregon-Washington). Current population status differs by area which may be valuable information for making management and allocation decisions (@fig-status-area-es).
 
@@ -118,7 +118,7 @@ Estimated relative spawning output was below the minimum stock size threshold in
 <!-- Trends and current levels relative to virgin or historic levels, description of uncertainty-include table for last 10 years and graph with long term estimates. -->
 \pagebreak
 
-```{r, tbl-es-sb, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-sb
 #| warning: false
 #| echo: false
@@ -154,7 +154,7 @@ ssb_es_table |>
 #| echo: false 
 #| warning: false 
 #| eval: true 
-#| fig-cap: "Time series of estimated spawning output (millions of eggs) for the base model (circles) with ~ 95% interval (dashed lines)."
+#| fig-cap: "Time series of estimated spawning output (billions of eggs) for the base model (circles) with ~ 95% interval (dashed lines)."
 #| fig-pos: H
 
 knitr::include_graphics("figures/r4ss_plots/plots/ts7_Spawning_output_with_95_intervals.png")
@@ -194,7 +194,7 @@ The largest estimated recruitment events were in 1971, followed by more recently
 
 <!-- Trends and current levels relative to virgin or historic levels-include table for last 10 years and graph with long term estimates. -->
 
-```{r, tbl-es-recr, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-recr
 #| warning: false
 #| echo: false
@@ -254,7 +254,7 @@ knitr::include_graphics("figures/r4ss_plots/plots/recdevs2_withbars.png")
 
 ## Exploitation Status{-}
 
-This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target SO40% of unfished spawning output. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid-1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
+This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO~25%~, and slightly above the management target SO~40%~ of unfished spawning output. Fishing intensity increased throughout the 1900s as the stock was fished down, until stabilizing at peak intensity between the mid-1980s and late 1990s and substantially decreasing in the late 1990s and early 2000s, around the time the stock was declared overfished. Fishing intensity has since been relatively stable (@fig-es-kobe, @tbl-es-spr). 
 
 <!-- Exploitation rates (i.e., total catch divided by exploitable biomass, or the annual SPR harvest rate) - include a table with the last 10 years of data and a graph showing the trend in fishing mortality relative to the target (y-axis) plotted against the trend in biomass relative to the target (x-axis). -->
 
@@ -272,7 +272,7 @@ knitr::include_graphics("figures/r4ss_plots/plots/SPR4_phase.png")
 ```
 
 \clearpage
-```{r, tbl-es-spr, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-spr
 #| warning: false
 #| echo: false
@@ -305,13 +305,13 @@ No ecosystem or environmental data was used in the previous Yelloweye Rockfish a
 
 ## Reference Points{-}
 
-A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1 - 1,331.9 million eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 million eggs (95% confidence interval: 419 - 533), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108 - 137 mt).
+A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` billion eggs (95% confidence interval: 1,048.1 - 1,331.9 billion eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO~40%~), which is estimated by the model to be 476 billion eggs (95% confidence interval: 419 - 533), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO~40%~ (95% confidence interval: 108 - 137 mt).
 
 <!-- Management targets and definitions of overfishing, including the harvest rate that brings the stock to equilibrium at B24% for flatfishes and B40% for all other groundfish stocks (BMSY proxies) and the equilibrium stock size that results from fishing at the default harvest rate (the FMSY proxy). Include a summary table that compares estimated reference points for SSB, SPR, Exploitation Rate and Yield based on SSB proxy for MSY, SPR proxy for MSY, and estimated MSY values. -->
 
 \clearpage
 
-```{r, tbl-ref-points-es-1, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-ref-points-es-1
 #| warning: false
 #| echo: false
@@ -365,7 +365,7 @@ Recent trends in total catch relative to management guidelines is available in @
 
 <!-- Catches in comparison to OFL, ABC, HG, and OY/ACL values for the most recent 10 years (when available), overfishing levels, actual catch and discard. Include OFL (encountered), OFL (retained) and OFL (dead) if different due to discard and discard mortality. -->
 
-```{r, tbl-es-management, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-management
 #| warning: false
 #| echo: false
@@ -420,9 +420,7 @@ This section will be updated after SSC GFSC review.
 
 \clearpage
 
-::: {.landscape}
-
-```{r, tbl-es-projections, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-projections
 #| warning: false
 #| echo: false
@@ -461,18 +459,16 @@ projections_table |>
 cat("\n\\end{landscape}\n")
 ```
 
-:::
-
 \clearpage
 ## Decision Table{-}
 
 This section will be updated after SSC GFSC review.
 
-```{r, 1, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-decision-1
 #| warning: false
 #| echo: false
-#| tbl-cap: "Decision table with 12-year projections. 'Mgmt' refers to the management scenario (A) with the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 thousands of fish based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in millions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
+#| tbl-cap: "Decision table with 12-year projections. 'Mgmt' refers to the management scenario (A) with the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 thousands of fish based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in billions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
 #| tbl-pos: H
  table_decision(
    list(mod_low_A, mod_base_A, mod_high_A)
