--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -2,7 +2,7 @@
 
 <!-- Introduction -->
 
-```{r, tbl-yelloweye_management, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-ye-management
 #| warning: false
 #| echo: false
@@ -56,7 +56,7 @@ recent_management_table |>
 #| label: tbl-all_removals
 #| warning: false
 #| echo: false
-#| tbl-cap: "Time series of Yelloweye Rockfish catches by fleet (mt) and total catch (mt) summed across fleets. Trawl fleets include Yelloweye Rockfish bycatch in foreign POP and in at-sea Pacific hake fisheries."
+#| tbl-cap: "Time series of Yelloweye Rockfish catches by fleet and total catch (mt) summed across fleets (total catch includes WA REC catch converted to mt). Trawl fleets include Yelloweye Rockfish bycatch in foreign POP and in at-sea Pacific hake fisheries."
 
 cat("\\begin{landscape}\n")
 
@@ -101,7 +101,7 @@ cat("\n\\end{landscape}\n")
 
 {{< pagebreak >}}
 
-```{r, yelloweye_percent_pos_ORFS}
+```{r}
 #| label: tbl-yelloweye_percent_pos_ORFS
 #| echo: false
 #| warning: false
@@ -117,7 +117,7 @@ read.csv("Tables/yelloweye_percent_pos_ORFS.csv") |>
   as_latex()
 ```
 
-```{r, yelloweye_model_selection_ORFS}
+```{r}
 #| label: tbl-yelloweye_model_selection_ORFS
 #| echo: false
 #| warning: false
@@ -138,7 +138,7 @@ orfs_modselect |>
 
 \clearpage
 
-```{r, yelloweye_percent_pos_ORBS}
+```{r}
 #| label: tbl-yelloweye_percent_pos_ORBS
 #| echo: false
 #| warning: false
@@ -154,7 +154,7 @@ read.csv("Tables/yelloweye_percent_pos_ORBS.csv") |>
   as_latex()
 ```
 
-```{r, yelloweye_model_selection_ORBS}
+```{r}
 #| label: tbl-yelloweye_model_selection_ORBS
 #| echo: false
 #| warning: false
@@ -481,7 +481,7 @@ cat("\n\\end{landscape}\n")
 #| warning: false
 #| echo: false
 #| eval: !expr eval_tables 
-#| tbl-cap: !expr if(eval_tables) time_series_cap 
+#| tbl-cap: "Time series of population estimates from the base model, including projections from 2025 to 2036." 
 #| tbl-pos: H
 
 time_series_table |>
@@ -489,7 +489,7 @@ kableExtra::kable(
   format = "latex", 
   longtable = TRUE,
   booktabs = TRUE,
-  caption = "Time series of population estimates from the base model.",
+  caption = "Time series of population estimates from the base model, including projections from 2025 to 2036.",
   linesep = "") |>
   kableExtra::kable_styling(
     latex_options = "repeat_header",
@@ -503,7 +503,7 @@ kableExtra::kable(
 {{< pagebreak >}}
 
 <!-- Table 20 reference point -->
-```{r, tbl-ref-points-es-2, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-ref-points-es-2
 #| warning: false
 #| echo: false
@@ -594,11 +594,11 @@ cat("\n\\end{landscape}\n")
 {{< pagebreak >}}
 
 <!-- Table 22 states of nature -->
-```{r, 2, results = "asis"}
+```{r, results = "asis"}
 #| label: tbl-es-decision-2
 #| warning: false
 #| echo: false
-#| tbl-cap: "Decision table with 10-year projections. 'Mgmt' refers to the three management scenarios (A) the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 thousands of fish based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in millions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
+#| tbl-cap: "Decision table with 10-year projections. 'Mgmt' refers to the three management scenarios (A) the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 thousands of fish based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in billions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
 #| tbl-pos: H
  table_decision(
    list(mod_low_A, mod_base_A, mod_high_A)
